2008-05-19  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, man/useradd.8.xml: Document the -k, --skel option, and
	update the -m, --create-home documentation.

2008-05-19  Nicolas François  <nicolas.francois@centraliens.net>

	* man/useradd.8.xml: Sort options.

2008-05-19  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/getdef.c: SHA_CRYPT_MAX_ROUNDS and SHA_CRYPT_MIN_ROUNDS can
	only exist if configured with --with-sha-crypt.
	* man/login.defs.d/SHA_CRYPT_MIN_ROUNDS.xml: Likewise.

2008-05-19  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/salt.c: Document the section closed by #endif

2008-05-19  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Fix formatting.

2008-05-19  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, man/useradd.8.xml: Document the -r, --system option.
	* NEWS, man/groupadd.8.xml: Document the -r, --system option.
	* NEWS, man/newusers.8.xml: Document the -r, --system option.
	* NEWS, man/newusers.8.xml: Document the -c, --crypt-method and
	-s, --sha-rounds options.

2008-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	Import Debian patch 487_passwd_chauthtok_failed_message
	* libmisc/pam_pass.c: Be more verbose and indicate that the
	password was not changed when pam_chauthtok fails (in addition to
	the PAM error, which may not be comprehensible for the users).

2008-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	Import Debian patch 434_login_stop_checking_args_after--
	* NEWS, src/login.c (check_flags): Stop checking the arguments
	after --. The later options will be sent to the shell, and do not
	need to be checked.

2008-05-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/vipw.c, src/su.c, src/newgrp.c: Harmonize the children's
	SIGSTOP handling. Raise the signal which stopped the child instead
	of always SIGSTOP.

2008-05-18  Nicolas François  <nicolas.francois@centraliens.net>
