@@ -197,7 +197,8 @@
 	<listitem>
 	  <para>
 	    ENCRYPT_METHOD MAX_MEMBERS_PER_GROUP MD5_CRYPT_ENAB
-	    SHA_CRYPT_MAX_ROUNDS SHA_CRYPT_MIN_ROUNDS
+	    <phrase condition="sha_crypt">SHA_CRYPT_MAX_ROUNDS
+	    SHA_CRYPT_MIN_ROUNDS</phrase>
 	  </para>
 	</listitem>
       </varlistentry>
@@ -205,8 +206,9 @@
 	<term>chpasswd</term>
 	<listitem>
 	  <para>
-	    ENCRYPT_METHOD MD5_CRYPT_ENAB SHA_CRYPT_MAX_ROUNDS
-	    SHA_CRYPT_MIN_ROUNDS
+	    ENCRYPT_METHOD MD5_CRYPT_ENAB
+	    <phrase condition="sha_crypt">SHA_CRYPT_MAX_ROUNDS
+	    SHA_CRYPT_MIN_ROUNDS</phrase>
 	  </para>
 	</listitem>
       </varlistentry>
@@ -225,7 +227,8 @@
 	<listitem>
 	  <para>
 	    ENCRYPT_METHOD MAX_MEMBERS_PER_GROUP MD5_CRYPT_ENAB
-	    SHA_CRYPT_MAX_ROUNDS SHA_CRYPT_MIN_ROUNDS
+	    <phrase condition="sha_crypt">SHA_CRYPT_MAX_ROUNDS
+	    SHA_CRYPT_MIN_ROUNDS</phrase>
 	  </para>
 	</listitem>
       </varlistentry>
@@ -321,8 +324,9 @@
 	    ENCRYPT_METHOD
 	    GID_MAX GID_MIN
 	    MAX_MEMBERS_PER_GROUP MD5_CRYPT_ENAB
-	    PASS_MAX_DAYS PASS_MIN_DAYS PASS_WARN_AGE SHA_CRYPT_MAX_ROUNDS
-	    SHA_CRYPT_MIN_ROUNDS
+	    PASS_MAX_DAYS PASS_MIN_DAYS PASS_WARN_AGE
+	    <phrase condition="sha_crypt">SHA_CRYPT_MAX_ROUNDS
+	    SHA_CRYPT_MIN_ROUNDS</phrase>
 	    SYS_GID_MAX SYS_GID_MIN SYS_UID_MAX SYS_UID_MIN UID_MAX UID_MIN
 	    UMASK
 	  </para>
@@ -335,7 +339,8 @@
 	  <para>
 	    ENCRYPT_METHOD MD5_CRYPT_ENAB OBSCURE_CHECKS_ENAB
 	    PASS_ALWAYS_WARN PASS_CHANGE_TRIES PASS_MAX_LEN PASS_MIN_LEN
-	    SHA_CRYPT_MAX_ROUNDS SHA_CRYPT_MIN_ROUNDS
+	    <phrase condition="sha_crypt">SHA_CRYPT_MAX_ROUNDS
+	    SHA_CRYPT_MIN_ROUNDS</phrase>
 	  </para>
 	</listitem>
       </varlistentry>
