@@ -1,5 +1,11 @@
 2008-05-19  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* man/login.defs.5.xml: SHA_CRYPT_MAX_ROUNDS and
+	SHA_CRYPT_MIN_ROUNDS can only exist if configured with
+	--with-sha-crypt.
+
+2008-05-19  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* NEWS, man/useradd.8.xml: Document the -k, --skel option, and
 	update the -m, --create-home documentation.
 
